[package]
name = "neon-playground"
version = "0.1.0"
authors = ["Tommy Pham <phamtommylong1991@gmail.com>"]
license = "MIT"
build = "build.rs"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "neon_playground"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.3.1"

[dependencies]
neon = "0.10.1"
